--- a/css/style.css
+++ b/css/style.css
@@ -2963,6 +2963,10 @@ q {
   } */
 }
 
+.l-section-top-single {
+  padding-top: 114px;
+}
+
 .l-single-top {
   padding-top: var(--modular-section-padding);
 }
