--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -11,6 +11,10 @@
     //120
 }
 
+.l-section-top-single {
+    padding-top: 114px;
+}
+
 .l-single-top {
     padding-top: var(--modular-section-padding);
     @media screen and (min-width: $lg) {
